# yew-rust-frontend

./: Cargo.toml  README.md  index.scss
server/: .env  Cargo.toml
server/src/: handlers.rs  main.rs
src/: app.rs  form.rs  main.rs  products.rs
