[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.25.0", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
axum = "0.6.4"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"]}
dotenv = "0.15.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "json", "postgres", "macros"]}
serde = "1.0.152"
serde_json = "1.0.96"
